# sdp_ws

./: .gitignore  frames.gv  helpfullcommand  req_pip  sdp_ws_req  start.bash
mqtt_project/: mqtt_to_thingsboard.py
src/articubot_one/description/: robot_core.xacro
src/drivers/aruco_detection/: CMakeLists.txt  package.xml  setup.py
src/drivers/aruco_detection/src/: aruco_detector.py
src/drivers/battery_monitor/: package.xml  setup.py
src/drivers/battery_monitor/battery_monitor/: battery_monitor.py
src/drivers/l298n/l298n/: cmd_to_pwm.py
src/drivers/mqtt_subscriber/: package.xml  setup.cfg  setup.py
src/drivers/mqtt_subscriber/mqtt_subscriber/: mqtt_subscriber.py
src/drivers/ros2_aruco/ros2_aruco/config/: aruco_parameters.yaml
src/drivers/ros2_ina219/: CMakeLists.txt  package.xml
src/drivers/ros2_ina219/include/ina219_driver/: ina219_node.h
src/drivers/ros2_ina219/src/: ina219_node.cpp
src/drivers/ros2_mpu6050/config/: params.yaml
src/drivers/ros2_mpu6050/include/ros2_mpu6050/: mpu6050_hal.h
src/drivers/usb_cam/: CMakeLists.txt
src/my_bot/config/: controller.yaml  mapper_params_online_async.yaml
src/my_bot/description/: camera.xacro  lidar.xacro  robot.urdf.xacro  robot_core.xacro  viam.urdf.xacro
src/my_bot/launch/: robot.launch.py
src/opencv_cam/: calibration.yaml
src/opencv_cam/include/opencv_cam/: camera_context.hpp
src/opencv_cam/launch/: composition_launch.py
